# FVM-RG-Solver

./: .gitignore  CMakeLists.txt
example-shockwave/: CMakeLists.txt  ML Energy.ipynb  ML Temperature.ipynb  ML_validations.ipynb  Validations.ipynb  nonlinear_border_system_solver.py  shockwave-ar-solver-main.cpp  shockwave-ch4-solver-main.cpp  shockwave-solver-lib_main.cpp  traced_energynn_model.pt
example-shockwave/.ipynb_checkpoints/: ML Energy-checkpoint.ipynb
example-shockwave/_validations/2024.04.14_bulk_off_vibr_on_1494.336sec/278.598730/: density.txt  pressure.txt  temp.txt  velocity.txt  velocity_tau.txt
example-shockwave/_validations/2024.04.14_bulk_off_vibr_on_1494.336sec/647.706698/: density.txt  pressure.txt  temp.txt  velocity.txt  velocity_tau.txt
example-shockwave/_validations/2024.04.14_bulk_on_vibr_on_1747.703sec/213.831584/: density.txt  temp.txt  velocity_normal.txt  velocity_tau.txt
example-shockwave/_validations/2024.04.14_bulk_on_vibr_on_1747.703sec/26.006859/: density.txt  pressure.txt  temp.txt  velocity.txt  velocity_tau.txt
example-shockwave/_validations/2024.04.14_bulk_on_vibr_on_1747.703sec/550.620746/: pressure.txt  temp.txt  velocity_tau.txt
example-shockwave/_validations/2024.04.14_bulk_on_vibr_on_1747.703sec/647.706698/: density.txt  pressure.txt  temp.txt  velocity.txt
example-shockwave/_validations/bulk_off_vibr_off_bctype1/13.053429/: density.txt  pressure.txt  temp.txt  velocity.txt  velocity_tau.txt
example-shockwave/_validations/bulk_off_vibr_off_bctype1/3121.876463/: density.txt  pressure.txt  temp.txt  velocity.txt  (+1 more)
(+118 files in other folders)
